[package]
name = "oxydian"
description = "Rust Interface for Obsidian"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/cxrvus/oxydian"


[dependencies]
clap = { version = "4.5.4", features = ["cargo", "derive"] }
serde = { version = "1.0.200" }
serde_json = { version = "1.0.116" }
