[package]
name = "oxydian"
description = "Rust Interface for Obsidian"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/cxrvus/oxydian"


[dependencies]
anyhow = { version = "1.0.83" }
clap = { version = "4.5.4", features = ["cargo", "derive"] }
regex = { version = "1.10.4" }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0.116" }
serde_yaml = { version = "0.9.34+deprecated" }
